# mgrid

./: .clang-format  CMakeLists.txt  Cargo.toml
infra/: CMakeRC.cmake  format  run_tests
shaders/: grid_tess_ctrl.glsl  grid_tess_eval.glsl  grid_vert.glsl  shaders.qrc
src/: angle.cc  angle.hh  bvh.rs  camera.cc  camera.hh  camera_controller.cc  camera_controller.hh  common.hh  draw_mesh.cc  draw_mesh.hh  draw_ray.cc  draw_ray.hh  elements.rs  errors.cc  errors.hh  events.cc  events.hh  grid.cc  grid.hh  grid_inline.hh  grid_texture.hh  intersect_ray_triangle.cc  intersect_ray_triangle.hh  key.rs  main.cc  main.rs  mesh.cc  mesh.hh  ray.hh  resources.cc  resources.hh  resources.qrc  sculpt.cc  sculpt.hh  shader.cc  shader.hh  texture.cc  texture.hh  unique_key.hh  vao.cc  (+3 more)
src/shaders/: basic.vert.glsl  grid_frag.glsl  grid_geom.glsl  grid_tess_ctrl.glsl  grid_tess_eval.glsl  grid_vert.glsl
test/: stringify.hh  test_camera.cc  test_common.hh  test_intersect.cc
tools/: format
